syntax = "proto3";

package com.muuzika.registry;

import "common.proto";
import "google/protobuf/empty.proto";
import "registry/common.proto";
import "registry/lobby.proto";

message CreateRoomInServerRequest {
  common.RoomCode code = 1;
  CreateRoomRequest request = 2;
}

message CreateRoomInServerResponse {
  oneof response {
    google.protobuf.Empty success = 1;
    CreateRoomInServerError error = 2;
  }
}

message CreateRoomInServerError {
  oneof error {
    google.protobuf.Empty internal_error = 1;
    RoomRegistryDefinition room_already_exists = 2;
  }
}